--- a/web.config
+++ b/web.config
@@ -1,7 +1,7 @@
 <configuration>
-    <static.webServer>
+    <system.webServer>
         <staticContent>
             <mimeMap fileExtension=".mp4" mimeType="video/mp4"/>
         </staticContent>
-    </static.webServer>
+    </system.webServer>
 </configuration>
